# GuanFu

./: README.md
client/RA/: Cargo.toml  README.md  build.rs
client/RA/protos/: attestation.proto
client/RA/src/: main.rs  verifier.rs
client/RVP/: Cargo.toml  README.md
client/RVP/app/: Cargo.toml  README.md  build.rs
client/RVP/app/src/: main.rs
client/RVP/app/src/grpc/: control.rs  mod.rs  query.rs
client/RVP/client/: Cargo.toml  README.md  build.rs
client/RVP/client/src/: main.rs
client/RVP/lib/: Cargo.toml  beach_build.cpp
client/RVP/lib/guanfu-rs/: Dockerfile  build.sh  build1.sh  build2.sh  config
client/RVP/lib/guanfu-rs/ci/: create_deb.sh
client/RVP/lib/guanfu-rs/include/: dettraceSystemCall.hpp  util.hpp  utilSystemCalls.hpp
client/RVP/lib/guanfu-rs/json/: Makefile  build_json.cpp  jsonCppUsage.cpp  lib_and_link.txt  pack_and_link.txt
client/RVP/lib/guanfu-rs/mount/: new.guanfu  old.guanfu
client/RVP/lib/guanfu-rs/mount/success_json/json/: new.guanfu_anyascii  new.guanfu_ariadne  new.guanfu_autocfg  new.guanfu_bat  new.guanfu_bindgen  new.guanfu_box_drawing  new.guanfu_cargo-cache  new.guanfu_cargo-chef  new.guanfu_cargo-ctest  new.guanfu_cargo-deb  new.guanfu_cargo-hack  new.guanfu_cargo-make  new.guanfu_cargo-ndk  new.guanfu_cargo-watch  new.guanfu_cargo_binutils  new.guanfu_cargo_llvm_cov  new.guanfu_cfg_if  new.guanfu_clippy-sarif  new.guanfu_cmd_lib  new.guanfu_color_name  new.guanfu_comrak  new.guanfu_crossterm  new.guanfu_duck  new.guanfu_fast_socks5  new.guanfu_fd  new.guanfu_ferris_says  new.guanfu_fork  new.guanfu_globiter  new.guanfu_gptman  new.guanfu_grass  new.guanfu_grcov  new.guanfu_honggfuzz  new.guanfu_ic_cdk  new.guanfu_inferno  new.guanfu_just  new.guanfu_libc  new.guanfu_lockfile  new.guanfu_names  new.guanfu_parse_hyperlinks  new.guanfu_proc_macro2  (+21 more)
client/RVP/lib/guanfu-rs/src/: dettraceSystemCall.cpp  execution.cpp  seccomp.cpp  utilSystemCalls.cpp
client/RVP/lib/src/: lib.rs
client/RVP/lib/src/extractors/extractor_modules/: mod.rs
client/RVP/lib/src/extractors/extractor_modules/guanfu/: mod.rs
client/RVP/lib/src/extractors/extractor_modules/in_toto/: mod.rs
client/RVP/lib/src/pre_processor/: mod.rs
client/RVP/protos/: control.proto  query.proto
client/RVP/tests/message/: intoto.json
server/EGS/: Makefile  README.md
server/EGS/lib/: Cargo.toml
server/EGS/lib/src/: lib.rs
server/EGS/verifier/: Cargo.toml  build.rs
server/EGS/verifier/src/: main.rs
