[package]
name = "attestation-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = [ "full" ] }
clap = { version = "3.2.16", features = [ "derive" ] }
tonic = { version = "0.5.0" }
serde_json = "1.0.81"
anyhow = "1.0.59"
prost = "0.8.0"
log = "0.4.17"
reference-value-provider-service = { path = "../RVP/lib" }
eventlog-rs = {git = "https://github.com/inclavare-containers/eventlog-rs"}
lib = {path = "../../server/EGS/lib"}

[build-dependencies]
tonic-build = "0.5"
shadow-rs = "0.5.25"