[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = [ "full" ] }
clap = { version = "3.2.16", features = [ "derive" ] }
reference-value-provider-service = { path = "../lib" }
tonic = { version = "0.5.0" }
prost = "0.8"
serde_json = "1.0.81"
anyhow = "1.0.59"

[build-dependencies]
tonic-build = "0.5"
shadow-rs = "0.5.25"